# python-crfsuite

./: .gitignore  .gitmodules  .manylinux-cython.sh  .manylinux-install.sh  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  example.py  pyproject.toml  setup.py  tox.ini  update_cpp.sh
.github/workflows/: build_and_upload.yml  lint_python.yml  tests.yml  tox.yml
datasets/: conll.py
docs/: Makefile  conf.py  index.rst  make.bat  pycrfsuite.rst
examples/: CoNLL 2002.ipynb
pycrfsuite/: __init__.py  _dumpparser.py  _float_features.py  _logparser.py  _pycrfsuite.cpp  _pycrfsuite.pyx  crfsuite_api.pxd  pycrfsuite.cpp  pycrfsuite.pyx  trainer_wrapper.cpp  trainer_wrapper.hpp
tests/: conftest.py  test_conll.py  test_itemsequence.py  test_logparser.py  test_pycrfsuite.py  test_tagger.py  test_trainer.py  test_wrapper.py
